--- a/reveal.js-master/presentation.html
+++ b/reveal.js-master/presentation.html
@@ -95,7 +95,7 @@
 					</section>
 					<section>
 						<h2>Второй способ оформления</h2>
-						<p>Он удобнее, когда огромное количество одних и тех же параметров используются в коде. Внутри тега style, который находится внутри тега head, можно для какого-нибудь тега всегда применять одну и ту же операцию(например, рамка для div). Также внутри того самого тега style можно создавать классы. В каждом классе можно задать характерные для него параметры.
+						<p>Он удобнее, когда огромное количество одних и тех же параметров используются в коде. Внутри тега style, который находится внутри тега head, можно для какого-нибудь тега всегда применять одну и ту же операцию(например, рамка для div). Также внутри того самого тега style можно создавать классы. В каждом классе можно задать характерные для него параметры.</p>
 					</section>
 					<section data-markdown>
 						<h2>Пример этого оформления</h2>
