--- a/map.html
+++ b/map.html
@@ -26,15 +26,15 @@
         <div class="col-3">
             <div class="menu">
                 <div style="font-size: 1.5em; margin-bottom: 20px;">Меню:</div>
-                <a href="/Ilya/Bootstrap/index.html">
+                <a href="/index.html">
                     <div class="pagename">Изначальная страница</div>
-                <a href="/Ilya/Bootstrap/about.html">
+                <a href="/about.html">
                     <div class="pagename">Обо мне</div>
                 </a>
-                <a href="/Ilya/Bootstrap/studying.html">
+                <a href="/studying.html">
                     <div class="pagename">Учебные материалы</div >
                 </a>
-                <a href="/Ilya/Bootstrap/map.html">
+                <a href="/map.html">
                     <div class="pagename">Карта</div>
                 </a>
             </div>
