--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-9">
             <div class="inf"; style="margin-top: 50px">
-                Меня зовут Андросов Илья. Вот так я выгляжу:
+                Меня зовут Иосиф Андреевич. Вот так я выгляжу:
             </div>  
             <div style="margin-top: 20px;"><img src="/mask_10.jpg"></div>
             <div class="inf">Обожаю физику. Сейчас изучаю электричество, кинематику и динамику.</div>
