--- a/about.html
+++ b/about.html
@@ -26,15 +26,15 @@
         <div class="col-3">
             <div class="menu">
                 <div style="font-size: 1.5em; margin-bottom: 20px;">Меню:</div>
-                <a href="/index.html">
+                <a href="index.html">
                     <div class="pagename">Изначальная страница</div>
-                <a href="/about.html">
+                <a href="about.html">
                     <div class="pagename">Обо мне</div>
                 </a>
-                <a href="/studying.html">
+                <a href="studying.html">
                     <div class="pagename">Учебные материалы</div >
                 </a>
-                <a href="/map.html">
+                <a href="map.html">
                     <div class="pagename">Карта</div>
                 </a>
             </div>
@@ -43,7 +43,7 @@
             <div class="inf"; style="margin-top: 50px">
                 Меня зовут Иосиф Андреевич. Вот так я выгляжу:
             </div>  
-            <div style="margin-top: 20px;"><img src="/mask_10.jpg"></div>
+            <div style="margin-top: 20px;"><img src="mask_10.jpg"></div>
             <div class="inf">Обожаю физику. Сейчас изучаю электричество, кинематику и динамику.</div>
             <div class="inf">Ещё я очень хочу достигнуть <a href="https://i.gifer.com/7ic0.gif">профессиональной скорости набора текста на клавиатуре!</a></div>
         </div>
