--- a/studying.html
+++ b/studying.html
@@ -26,25 +26,25 @@
         <div class="col-3">
             <div class="menu">
                 <div style="font-size: 1.5em; margin-bottom: 20px;">Меню:</div>
-                <a href="/index.html">
+                <a href="index.html">
                     <div class="pagename">Изначальная страница</div>
-                <a href="/about.html">
+                <a href="about.html">
                     <div class="pagename">Обо мне</div>
                 </a>
-                <a href="/studying.html">
+                <a href="studying.html">
                     <div class="pagename">Учебные материалы</div >
                 </a>
-                <a href="/map.html">
+                <a href="map.html">
                     <div class="pagename">Карта</div>
                 </a>
             </div>
         </div>
         <div class="col-9">
             <div>
-                <div class="inf"><a href="/HTML.txt">Основы HTML, чуть-чуть CSS, теги и т.д.</a></div>
-                <div class="inf"><a href="/HTML_example.txt">Код, который писали на уроке</a></div>
-                <div class="inf"><a href="/bootstrap.txt">Bootstrap</a></div>
-                <div class="inf"><a href="/reveal.js-master/presentation.html">Презентация c reveal.js</a></div>
+                <div class="inf"><a href="HTML.txt">Основы HTML, чуть-чуть CSS, теги и т.д.</a></div>
+                <div class="inf"><a href="HTML_example.txt">Код, который писали на уроке</a></div>
+                <div class="inf"><a href="bootstrap.txt">Bootstrap</a></div>
+                <div class="inf"><a href="reveal.js-master/presentation.html">Презентация c reveal.js</a></div>
             </div>
         </div>
     </div>
