--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="inf"; style="margin-top: 50px">
                 Меня зовут Иосиф Андреевич. Вот так я выгляжу:
             </div>  
-            <div style="margin-top: 20px;"><img src="mask_10.jpg"></div>
+            <div style="margin-top: 20px;"><img src="mask.jpg"></div>
             <div class="inf">Обожаю физику. Сейчас изучаю электричество, кинематику и динамику.</div>
             <div class="inf">Ещё я очень хочу достигнуть <a href="https://i.gifer.com/7ic0.gif">профессиональной скорости набора текста на клавиатуре!</a></div>
         </div>
