--- a/about.html
+++ b/about.html
@@ -3,7 +3,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Обо мне</title>
     <style>
+       .outline {
+            border: 1px solid Black;
+            padding: 0 10px;
+        }
         .menu {
             color: #464646;
         }
@@ -17,14 +22,16 @@
             font-size: 1.75em;
             margin-top: 50px;
         }
-        body { background: #ebeaec !important; }
+        body {
+            background: #7CFC00;
+        }
     </style>
 </head>
 <body>
     <div class="container text-center">
     <div class="row">
         <div class="col-3">
-            <div class="menu">
+            <div style="margin-top: 20px; border-radius: 35px;" class="menu; outline">
                 <div style="font-size: 1.5em; margin-bottom: 20px;">Меню:</div>
                 <a href="index.html">
                     <div class="pagename">Изначальная страница</div>
